refs #7847 fix some alignments

--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -164,6 +164,7 @@ div.dataTable, div.dataTable > .dataTableWrapper {
   color: #888;
   text-align: left;
   margin: 10px;
+  margin-left: 13px;
 }
 
 .dataTablePages {
