--- a/plugins/Morpheus/stylesheets/main.less
+++ b/plugins/Morpheus/stylesheets/main.less
@@ -549,8 +549,12 @@ table.dataTable .dataTableRowActions {
 }
 
 .dataTableFooterIcons {
-  padding: 6px 8px 0px;
+  padding: 6px 12px 0px;
   border-top: 1px solid @color-silver-l90;
+}
+
+.UserCountryMap-btn-zoom {
+  padding-left: 0px;
 }
 
 div.sparkline {
